html - etiqueta de lista desordenada

--- a/index.html
+++ b/index.html
@@ -11,5 +11,13 @@
 
     <p>+15 años de experiencia como <strong>Ingeniero de Software</strong>. Creador y divulgador de programación.</p>
 
+    <h2>Experiencia</h2>
+
+    <ul>
+        <li class="list-item">Adevinta - 2022</li>
+        <li class="list-item">Hubii - 2020</li>
+        <li class="list-item">Nacencia - 2015</li>
+    </ul>
+
 </body>
 </html>
