html - Etiquetas reemplazables, img, input

--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@
         <li class="list-item">Hubii - 2020</li>
         <li class="list-item">Nacencia - 2015</li>
     </ul>
-
+    
+    <img
+        id="photo-image"
+        width="200"
+        height="200"
+        title="foto de midudev" 
+        src="./images/Peter.1.jpg" 
+        alt="foto de midudev mirando a la izquierda"
+    >
+    
 </body>
 </html>
