html - Detalle importante de los atributos

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     </ul>
     
     <img
+        width="200"
+        height="200"
         title="foto de midudev" 
         src="./images/Peter.1.jpg" 
         alt="foto de midudev mirando a la izquierda"
