html - Atributos globales, id y class

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </ul>
     
     <img
-        hidden
+        id="photo-image"
         width="200"
         height="200"
         title="foto de midudev" 
