html - Estructura básica de html, DOCTYPE

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+    <!-- NODO especial para especificar la versión del documento html que estamos utilizando, le dice al navegador como debe interpretar y renderizar el lenguage html de la página -->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
