html - Estructura básica de html, html

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
     <!-- NODO especial para especificar la versión del documento html que estamos utilizando, le dice al navegador como debe interpretar y renderizar el lenguage html de la página -->
 <html lang="en">
+    <!-- Declaración del principio del documento, contiene todo el contenido, se divide en 2: head y body -->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
