html - Estructura básica de html, head

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="en">
     <!-- Declaración del principio del documento, contiene todo el contenido, se divide en 2: head y body -->
 <head>
+    <!-- Elemento para poner metadatos, información extra, que archivos css cargar, dar mas información a nuestra página-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
