html - Estructura básica de html, Metadato UTF-8

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <head>
     <!-- Elemento para poner metadatos, información extra, que archivos css cargar, dar mas información a nuestra página-->
     <meta charset="UTF-8">
+        <!-- codificación que debe utilizar, sirve para emogis y las tíldes que puede utilizar tu página y no se vean mal al momento de renderizar -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
