--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta charset="UTF-8">
         <!-- codificación que debe utilizar, sirve para emogis y las tíldes que puede utilizar tu página y no se vean mal al momento de renderizar -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!-- Indica que el sitio sea adaptable, que el ancho del contenido sea el ancho de la pantalla -->
     <title>Document</title>
 </head>
 <body>
