html - Estructura básica de html, Etiqueta title

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- Indica que el sitio sea adaptable, que el ancho del contenido sea el ancho de la pantalla -->
     <title>Document</title>
+        <!-- titulo del documento, aparece en la pestañá del navegador -->
 </head>
 <body>
     
