html - Estructura básica de html, Metadatos Robots y Theme color

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
         <!-- Indica que el sitio sea adaptable, que el ancho del contenido sea el ancho de la pantalla -->
     <title>Document</title>
         <!-- titulo del documento, aparece en la pestañá del navegador -->
+
+    <meta name="robots" content="index, follow">
+        <!-- metadato para google y otros buscadores, para indicar si tiene que indexar la pagina y seguir los enlaces-->
+    <meta name="theme-color" content="#8f7ada">
+        <!-- algunos metadatos para navegadores en concreto, cambia el color del tema del navegador-->    
 </head>
 <body>
     
