html - Estructura básica de html, Favicon

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         <!-- metadato para google y otros buscadores, para indicar si tiene que indexar la pagina y seguir los enlaces-->
     <meta name="theme-color" content="#8f7ada">
         <!-- algunos metadatos para navegadores en concreto, cambia el color del tema del navegador-->    
+    
+    <link rel="icon" type="images/jpg" href="/images/Peter.1.jpg">
+        <!-- favicon, para que una imagen salga al lado del título de la pestaña en el navegador -->
 </head>
 <body>
     
