html - Etiquetas para el SEO, Meta description

--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
         <!-- codificación que debe utilizar, sirve para emogis y las tíldes que puede utilizar tu página y no se vean mal al momento de renderizar -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- Indica que el sitio sea adaptable, que el ancho del contenido sea el ancho de la pantalla -->
-    <title>Document</title>
+    <title>Portfolio Midudev</title>
         <!-- titulo del documento, aparece en la pestañá del navegador -->
+
+    <meta name="description" content="Portfolio de midudev, 15 años de experiencia como ingeniero de software">
+        <!-- descripcion que se normalmente se encuentra cuando buscas la página en el buscador -->
 
     <meta name="robots" content="index, follow">
         <!-- metadato para google y otros buscadores, para indicar si tiene que indexar la pagina y seguir los enlaces-->
