--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
     <meta name="description" content="Portfolio de midudev, 15 años de experiencia como ingeniero de software">
         <!-- descripcion que se normalmente se encuentra cuando buscas la página en el buscador -->
 
+    <!-- OPEN GRAPH (SEO), conjunto de etiquetas que creó facebook para que cuando compartas un contenido se vea bien-->
+    <meta property="og:title" content="Portfolio de un ingeniero de software">
+    <meta property="og:description" content="Portfolio de un ingeniero de software">
+    <meta property="og:image" content="/images/Peter.1.jpg">
+    <meta property="og:image:alt" content="una fotografía de Midudev">
+
     <meta name="robots" content="index, follow">
         <!-- metadato para google y otros buscadores, para indicar si tiene que indexar la pagina y seguir los enlaces-->
     <meta name="theme-color" content="#8f7ada">
