html - Etiquetas para el SEO, etiqueta link-alternate

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     <meta property="og:image" content="/images/Peter.1.jpg">
     <meta property="og:image:alt" content="una fotografía de Midudev">
 
+    <link rel="alternate" href="https://midu.dev/en" hreflang="en-GB">
+        <!-- Enlazar a un recurso externo que sea la alternativa de nuestra página, en este ejemplo de la misma página pero traducido al inglés de Gran Bretaña -->
+
     <meta name="robots" content="index, follow">
         <!-- metadato para google y otros buscadores, para indicar si tiene que indexar la pagina y seguir los enlaces-->
     <meta name="theme-color" content="#8f7ada">
