html - Etiquetas para el SEO, etiqueta link-canonical

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 
     <link rel="alternate" href="https://midu.dev/en" hreflang="en-GB">
         <!-- Enlazar a un recurso externo que sea la alternativa de nuestra página, en este ejemplo de la misma página pero traducido al inglés de Gran Bretaña -->
+    <link rel="canonical" href="https://midu.dev">
+        <!-- indicar cual es la página principal de nuestro sitio (ejemplo)-->
 
     <meta name="robots" content="index, follow">
         <!-- metadato para google y otros buscadores, para indicar si tiene que indexar la pagina y seguir los enlaces-->
