--- a/index.html
+++ b/index.html
@@ -56,5 +56,32 @@
         alt="foto de midudev mirando a la izquierda"
     >
 
+    <h2>Proyectos realizados</h2>
+
+    <aside>
+        <header>
+            <h3>Mis tecnologías favoritas</h3>
+        </header>
+
+        <ol>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>Javascript</li>
+            <li>Node.js</li>
+        </ol>
+    </aside>
+
+    <section>
+        <article>
+            <header>
+                <h4>Sitio Web Corporativo</h4>
+            </header>
+            <p>Desarrollo de un sitio web corporativo con una interfaz amigable y moderna
+            </p>
+            <footer>
+                Tecnologías utilizadas: HTML, CSS, JavaScript
+            </footer>
+        </article>
+    </section>
 </body>
 </html>
