--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <p>Desarrollo de un sitio web corporativo con una interfaz amigable y moderna
             </p>
             <footer>
-                Tecnologías utilizadas: HTML, CSS, JavaScript
+                <small>Tecnologías utilizadas: HTML, CSS, JavaScript</small>
             </footer>
         </article>
     </section>
