--- a/index.html
+++ b/index.html
@@ -83,5 +83,31 @@
             </footer>
         </article>
     </section>
+
+    <section>
+        <article>
+            <header>
+                <h4>Sitio Web Corporativo</h4>
+            </header>
+            <p>Desarrollo de un sitio web corporativo con una interfaz amigable y moderna
+            </p>
+            <footer>
+                <small>Tecnologías utilizadas: HTML, CSS, JavaScript</small>
+            </footer>
+        </article>
+    </section>
+    
+    <section>
+        <article>
+            <header>
+                <h4>Sitio Web Corporativo</h4>
+            </header>
+            <p>Desarrollo de un sitio web corporativo con una interfaz amigable y moderna
+            </p>
+            <footer>
+                <small>Tecnologías utilizadas: HTML, CSS, JavaScript</small>
+            </footer>
+        </article>
+    </section>
 </body>
 </html>
