html - HTML semántico, etiqueta anchor, atributos

--- a/index.html
+++ b/index.html
@@ -37,7 +37,15 @@
     <header>
         <h1>Portfolio de midudev</h1>
         <nav>
-            
+            <!-- enlaces internos -->
+            <a href="#experiencia">Experiencia</a>
+            <a href="#proyectos">Proyectos</a>
+            <!-- enlaces externos -->
+            <a 
+                href="https://www.twitch.tv/midudev"
+                target="_blank"
+                rel="noreferrer"
+            >Twitch</a>
         </nav>
     </header>
 
@@ -46,7 +54,7 @@
 
         <p>+15 años de experiencia como <strong>Ingeniero de Software</strong>. Creador y divulgador de programación.</p>
 
-        <h2>Experiencia</h2>
+        <h2 id="experiencia">Experiencia</h2>
 
         <ul>
             <li class="list-item">Adevinta - 2022</li>
@@ -63,7 +71,7 @@
             alt="foto de midudev mirando a la izquierda"
         >
 
-        <h2>Proyectos realizados</h2>
+        <h2 id="proyectos">Proyectos realizados</h2>
 
         <aside>
             <header>
