html - HTML semántico, atributo role

--- a/index.html
+++ b/index.html
@@ -86,6 +86,10 @@
             </ol>
         </aside>
 
+        <div role="button">
+
+        </div>
+
         <section>
             <article>
                 <header>
