--- a/index.html
+++ b/index.html
@@ -62,14 +62,18 @@
             <li class="list-item">Nacencia - 2015</li>
         </ul>
         
-        <img
+        <!-- download, solo funciona con recursos que tengas en tu propio dominio -->
+        <a download href="./images/Peter.1.jpg">
+            <img
             id="photo-image"
             width="200"
             height="200"
             title="foto de midudev" 
             src="./images/Peter.1.jpg" 
             alt="foto de midudev mirando a la izquierda"
-        >
+            >
+        </a>
+        
 
         <h2 id="proyectos">Proyectos realizados</h2>
 
@@ -85,10 +89,6 @@
                 <li>Node.js</li>
             </ol>
         </aside>
-
-        <div role="button">
-
-        </div>
 
         <section>
             <article>
@@ -129,5 +129,12 @@
             </article>
         </section>
     </main>
+
+    <footer>
+        Copyright © 2023
+
+        <a href="mailto:miduga@gmail.com">Enviame un correo</a>
+        <a href="tel:+34688888899">Llamar por teléfono</a>
+    </footer>
 </body>
 </html>
