html - Atributos de listas, type, value

--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
                 <h3>Mis tecnologías favoritas</h3>
             </header>
 
-            <ol>
+            <ol type="1" reversed start="10">
                 <li>HTML</li>
                 <li>CSS</li>
-                <li>Javascript</li>
+                <li value="5">Javascript</li>
                 <li>Node.js</li>
             </ol>
         </aside>
