html - Elementos fieldset, legend y label

--- a/index.html
+++ b/index.html
@@ -128,6 +128,21 @@
                 </footer>
             </article>
         </section>
+
+        <section>
+            <h2>Formulario de contacto</h2>
+            <form method="post" action="/">
+                <fieldset>
+                    <legend>Información personal</legend>
+                    <label> Nombre: 
+                        <input 
+                            type="text" 
+                            name="name" placeholder="Midudev">
+                    </label>
+                    
+                </fieldset>
+            </form>
+        </section>
     </main>
 
     <footer>
