html - Etiqueta details

--- a/index.html
+++ b/index.html
@@ -130,6 +130,20 @@
         </section>
 
         <section>
+            <h2>Preguntas Frecuentes</h2>
+            <!-- si tiene el "open", estará abierto por defecto  -->
+            <details open>
+                <summary>¿Qué estudios tienes?</summary>
+                <p>Estudie en la Universidad Tecnológica del Perú, Ingeniería de Sistemas</p>
+            </details>
+
+            <details >
+                <summary>¿Qué Hobbys tienes?</summary>
+                <p>Me gusta salir a correr por las mañanas y jugar videojuegos en mis ratos libres</p>
+            </details>
+        </section>
+
+        <section>
             <h2>Formulario de contacto</h2>
             <form method="post" action="/">
                 <fieldset>
