html - Etiqueta video

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <link rel="icon" type="images/jpg" href="/images/Peter.1.jpg">
         <!-- favicon, para que una imagen salga al lado del título de la pestaña en el navegador -->
 </head>
+
 <body>
     <header>
         <h1>Portfolio de midudev</h1>
@@ -48,6 +49,15 @@
             >Twitch</a>
         </nav>
     </header>
+
+    <!-- Etiqueta Video
+        controls - para darle controles como play, pause, etc
+        autoplay - para que el video se reproduzca cuando cargue la página
+        loot - para que el video se repita cuando termine
+        muted - para mutear el video
+        poster - para darle un poster o imagen al video
+    -->
+    <video controls autplay loot muted poster="" src=""></video>
 
     <main>
         
