html - etiqueta audio

--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
     -->
     <video controls autplay loot muted poster="" src=""></video>
 
+    <!-- los controles cambian por el navegador -->
+    <audio controls src=""></audio>
+
     <main>
         
 
