html - iframe, icrustar otras páginas webs

--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
 <body>
     <header>
         <h1>Portfolio de midudev</h1>
+
+        <!-- los "allow" en un iframe son todos los servicios que permites a este iframe que pueda obtener de tu página o dispositivo -->
+        <!-- También puedes ponerle el aspect-ratio -->
+        <iframe style="width: 100%; aspect-ratio: 16/9;"  src="https://www.youtube.com/embed/3nYLTiY5skU?si=WgxfydGUMS4ayZtW" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
         <nav>
             <!-- enlaces internos -->
             <a href="#experiencia">Experiencia</a>
